# drg-save-editor

./: .gitignore  Cargo.toml
editor_app/src/: app.rs  main.rs
editor_app_old/: Cargo.toml
editor_app_old/src/: app.rs  error.rs  main.rs
editor_app_old/src/tabs/: driller.rs  engineer.rs  gunner.rs  mod.rs  resources.rs  scout.rs
editor_core/: Cargo.toml
editor_core/src/: error.rs  lib.rs  registry.rs
editor_core/src/save_file/: brewing.rs  dwarfs.rs  forge.rs  minerals.rs  miscellaneous.rs  mod.rs
editor_core/src/save_file/guids/: dwarfs.rs  mod.rs  overclocks.rs  resources.rs
editor_ui/: Cargo.toml  index.html
editor_ui/src/: main.rs
editor_ui/src/components/: app.rs  file_upload.rs  minerals.rs  mod.rs  save_display.rs
guids_generator/: Cargo.toml
guids_generator/src/: main.rs
guids_generator/src/commands/: assets.rs  cores.rs  json2rust.rs  mod.rs  overclocks.rs  sav2json.rs
