[package]
name = "editor_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
editor_core = { path = "../editor_core" }
thiserror.workspace = true
eframe = "0.21.3"
rfd = "0.11.3"
catppuccin-egui = "2.0.1"
egui_grid = "0.1.0"
egui-dropdown = "0.2.1"
egui_extras = "0.21.0"
poll-promise = "0.2.0"
parking_lot = "0.12.1"
