[package]
name = "editor_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gvas = { path = "C:/Users/funlennysub/Documents/cockding/gvas", features = [
    "serde",
] }
indexmap = "1.9.3"
serde_json = "1.0.96"
thiserror.workspace = true
