[package]
name = "editor_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.63"
console_error_panic_hook = "0.1.7"
leptos = { git = "https://github.com/leptos-rs/leptos", branch = "main", features = [
    "stable",
] }
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3", features = [
    "FileList",
    "HtmlInputElement",
    "Blob",
] }
editor_core = { path = "../editor_core", features = ["serde", "wasm"] }
