[package]
name = "guids_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
unreal_asset = "0.1.14"
unreal_pak = { git = "https://github.com/astrotechies/unrealmodding", rev="b65fd2e", package = "unreal_pak" }
walkdir = "2.3.3"
